--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-2" src="assets/img/profile.png" width="400" alt="..." /></span>
+                    <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-2" src="assets/img/Profile.png" width="400" alt="..." /></span>
                     <h1 class="mb-0">
                         Brayden Perez
                     </h1>
